// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`service layout multiple services — per-service directories (default) 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type {
  HttpInterpreterOptions,
  HttpRouter,
  MatchedRequestContext,
} from "@typespex/runtime/server";
import { bindRoute, createHttpRouter } from "@typespex/runtime/server";
import type { PublicApiServer } from "./server.js";
import { PublicApiOperations } from "./server-operations.js";

export function createPublicApiServerRouter<Ctx extends MatchedRequestContext>(
  implementation: PublicApiServer<Ctx>,
  options?: HttpInterpreterOptions<Ctx>,
): HttpRouter {
  return createHttpRouter(
    [bindRoute(PublicApiOperations.listItems, implementation.listItems)],
    options,
  );
}
"
`;

exports[`service layout multiple services — per-service directories (default) 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type {
  HttpInterpreterOptions,
  HttpRouter,
  MatchedRequestContext,
} from "@typespex/runtime/server";
import { bindRoute, createHttpRouter } from "@typespex/runtime/server";
import type { AdminApiServer } from "./server.js";
import { AdminApiOperations } from "./server-operations.js";

export function createAdminApiServerRouter<Ctx extends MatchedRequestContext>(
  implementation: AdminApiServer<Ctx>,
  options?: HttpInterpreterOptions<Ctx>,
): HttpRouter {
  return createHttpRouter(
    [bindRoute(AdminApiOperations.listUsers, implementation.listUsers)],
    options,
  );
}
"
`;

exports[`service layout multiple services — prefixed files 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  ErrorEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeJsonBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./PublicApi.server-hints.js";
import type { Item } from "./PublicApi.models.js";

const PublicApiOutput = {
  listItems: ResponseEncoders.json<Item[]>(200),
};

const PublicApiErrors = {
  listItems: ErrorEncoders.json<never>(500),
};

export const PublicApiOperations = {
  listItems: {
    endpoint: {
      service: { name: "PublicApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "listItems",
        operationId: "PublicApi.listItems",
        method: "GET" as const,
        path: "/items",
        hints: emptyHints(),
      },
    },
    decodeInput: () => Either.right({} as Record<string, never>),
    encodeOutput: (output: Item[]) => PublicApiOutput.listItems.encode(output),
    encodeError: (error: never) => PublicApiErrors.listItems.encode(error),
  } satisfies ServerOperation<Record<string, never>, never, Item[]>,
} as const;
"
`;

exports[`service layout multiple services — prefixed files 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type {
  HttpInterpreterOptions,
  HttpRouter,
  MatchedRequestContext,
} from "@typespex/runtime/server";
import { bindRoute, createHttpRouter } from "@typespex/runtime/server";
import type { PublicApiServer } from "./PublicApi.server.js";
import { PublicApiOperations } from "./PublicApi.server-operations.js";

export function createPublicApiServerRouter<Ctx extends MatchedRequestContext>(
  implementation: PublicApiServer<Ctx>,
  options?: HttpInterpreterOptions<Ctx>,
): HttpRouter {
  return createHttpRouter(
    [bindRoute(PublicApiOperations.listItems, implementation.listItems)],
    options,
  );
}
"
`;

exports[`service layout custom folder and file name patterns 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  ErrorEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeJsonBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.gen.js";
import type { Invoice } from "./models.gen.js";

const BillingAPIOutput = {
  listInvoices: ResponseEncoders.json<Invoice[]>(200),
};

const BillingAPIErrors = {
  listInvoices: ErrorEncoders.json<never>(500),
};

export const BillingAPIOperations = {
  listInvoices: {
    endpoint: {
      service: { name: "BillingAPI", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "listInvoices",
        operationId: "BillingAPI.listInvoices",
        method: "GET" as const,
        path: "/invoices",
        hints: emptyHints(),
      },
    },
    decodeInput: () => Either.right({} as Record<string, never>),
    encodeOutput: (output: Invoice[]) => BillingAPIOutput.listInvoices.encode(output),
    encodeError: (error: never) => BillingAPIErrors.listInvoices.encode(error),
  } satisfies ServerOperation<Record<string, never>, never, Invoice[]>,
} as const;
"
`;

exports[`service layout custom folder and file name patterns 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type {
  HttpInterpreterOptions,
  HttpRouter,
  MatchedRequestContext,
} from "@typespex/runtime/server";
import { bindRoute, createHttpRouter } from "@typespex/runtime/server";
import type { BillingAPIServer } from "./server.gen.js";
import { BillingAPIOperations } from "./server-operations.gen.js";

export function createBillingAPIServerRouter<Ctx extends MatchedRequestContext>(
  implementation: BillingAPIServer<Ctx>,
  options?: HttpInterpreterOptions<Ctx>,
): HttpRouter {
  return createHttpRouter(
    [bindRoute(BillingAPIOperations.listInvoices, implementation.listInvoices)],
    options,
  );
}
"
`;
